--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,15 +2,14 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion compile_sdk_version
+    compileSdkVersion Config.compile_sdk
 
     defaultConfig {
-        applicationId "com.example.diceroller"
-        minSdkVersion min_sdk_version
-        targetSdkVersion compile_sdk_version
-        versionCode 1
-        versionName "1.0"
-
+        applicationId Config.application_id
+        minSdkVersion Config.min_sdk
+        targetSdkVersion Config.target_sdk
+        versionCode Releases.version_code
+        versionName Releases.version_name
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -21,30 +20,34 @@ android {
         }
     }
 
-    flavorDimensions "version"
+    flavorDimensions Flavors.dimension_version
     productFlavors {
         demo {
-            dimension "version"
+            dimension Flavors.dimension_version
             manifestPlaceholders = [appLabel: "Dice Roller - Demo"]
             applicationIdSuffix ".demo"
         }
         full {
-            dimension "version"
+            dimension Flavors.dimension_version
             manifestPlaceholders = [appLabel: "Dice Roller - Full"]
             applicationIdSuffix ".full"
         }
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility Config.java_version
+        targetCompatibility Config.java_version
     }
 }
 
 dependencies {
+    implementation project(Modules.rollDice)
+    implementation Libraries.appcompat
+    implementation Libraries.constraint_layout
+
+    testImplementation TestLibraries.junit
+    androidTestImplementation AndroidTestLibraries.test_ext
+    androidTestImplementation AndroidTestLibraries.espresso
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation project(':rollDice')
-    implementation libraries
-    testImplementation testLibraries
-    androidTestImplementation androidTestLibraries
 }
