--- a/build.gradle
+++ b/build.gradle
@@ -14,38 +14,36 @@ buildscript {
         // in the individual module build.gradle files
     }
 
-    ext {
-        // global variables
-        compile_sdk_version = 33
-        min_sdk_version = 19
-
-        // local variables (use def)
-        def appcompat_version = '1.4.1'
-        def constraint_layout_version = '2.1.3'
-        def junit_version = '4.13.2'
-        def test_ext_version = '1.1.5'
-        def espresso_version = '3.4.0'
-
-        libraries = [
-                "androidx.appcompat:appcompat:$appcompat_version",
-                "androidx.constraintlayout:constraintlayout:$constraint_layout_version"
-        ]
-        testLibraries = [
-                "junit:junit:$junit_version"
-        ]
-        androidTestLibraries = [
-                "androidx.test.ext:junit:$test_ext_version",
-                "androidx.test.espresso:espresso-core:$espresso_version"
-        ]
-    }
-
-
 }
 
 allprojects {
     repositories {
         google()
         mavenCentral()
+    }
+}
+
+// For all subprojects - generate compileSdkVersion, minSdkVersion,
+// targetSdkVersion and Java compatibility
+subprojects {
+    afterEvaluate { project ->
+        if (project.plugins.findPlugin('android') ?:
+                project.plugins.findPlugin('android-library')) {
+            android {
+                compileSdkVersion Config.compile_sdk
+                buildFeatures {
+                    viewBinding true
+                }
+                defaultConfig {
+                    minSdkVersion Config.min_sdk
+                    targetSdkVersion Config.target_sdk
+                }
+                compileOptions {
+                    sourceCompatibility Config.java_version
+                    targetCompatibility Config.java_version
+                }
+            }
+        }
     }
 }
 
