--- a/rollDice/build.gradle
+++ b/rollDice/build.gradle
@@ -37,7 +37,7 @@ android {
         targetCompatibility Config.java_version
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = KotlinOptions.jvmTarget
     }
 }
 
