Created two .aar libraries: rollDice and dice (rollDice depends from dice). Published the libraries to mavenLocal. Added libraries dependency to project. For fullDebug build variant only.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,8 @@ android {
 }
 
 dependencies {
-    implementation project(Modules.rollDice)
+  //  implementation project(Modules.rollDice)
+    implementation ('com.example.diceroller.utils:rollDice:1.0')
     implementation Libraries.appcompat
     implementation Libraries.constraint_layout
 
